--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,9 +3,8 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
 
 
-a {text-decoration: none;}
+a {text-decoration: none;color: #338CDB;}
 a:hover{text-decoration: none;color: #338CDB;}
-a {color: #338CDB;}
 b,strong {font-weight: bold;}
 .row.m0 {margin: 0px;}
 .p0 {padding: 0px;}
@@ -62,6 +61,7 @@ a:hover,a:focus,.btn:hover,.btn:focus,button:hover,button:focus {text-decoration
 .t_color {color: #051441;}
 .w_color {color: #fff;}
 .t_color2 {color: #000;}
+.t_color333 {color: #333;}
 
 .t_color3 {color: #222d39;}
 .d_p_color {color: #bdbed6;}
@@ -69,6 +69,7 @@ a:hover,a:focus,.btn:hover,.btn:focus,button:hover,button:focus {text-decoration
 .dk_bg_one {background: #090a21;}
 .dk_bg_two {background: #0f1029;}
 .bg-2 {background: #f4faff!important;}
+.bg-white {background: #f4faff!important;}
 
 .seo_title_color {color: #263b5e;}
 .mt_60 {margin-top: 60px;}
@@ -10076,41 +10077,16 @@ margin-top: 50px;
 flex: 0 0 50%;
 max-width: 50%;
 }
-
-.p_details_three .portfolio_pagination {
-margin-top: 190px;
-}
-
-.p_details_three .icon {
-margin-top: 120px;
-}
+.p_details_three .portfolio_pagination {margin-top: 190px;}
+.p_details_three .icon {margin-top: 120px;}
 
 
 /*==============End portfolio_details_area css ==============*/
 
 
-/*====================================================*/
-
-
-/*====================================================*/
-
-
 /*================= map_area  ====================*/
-
-.map_area {
-height: 552px;
-position: relative;
-}
-
-.map_area iframe {
-height: 100%;
-width: 100%;
-border: 0px;
-pointer-events: none;
-margin: 0px;
-padding: 0px;
-}
-
+.map_area {height: 552px;position: relative;}
+.map_area iframe {height: 100%;width: 100%;border: 0px;pointer-events: none;margin: 0px;padding: 0px;}
 .app_contact_info {
 position: absolute;
 top: 50%;
@@ -10135,291 +10111,107 @@ bottom: -7px;
 -ms-transform: rotate(45deg);
 transform: rotate(45deg);
 }
-
-.app_contact_info .info_item {
-padding-left: 55px;
-position: relative;
-margin-bottom: 35px;
-}
-
-.app_contact_info .info_item i {
-position: absolute;
-left: 0;
-font-size: 30px;
-color: #5e2ced;
+.app_contact_info .info_item {padding-left: 55px;position: relative;margin-bottom: 35px;}
+.app_contact_info .info_item i {position: absolute;left: 0;font-size: 30px;color: #5e2ced;
 background-image: -moz-linear-gradient(0deg, #5e2ced 0%, #a485fd 100%);
 background-image: -webkit-linear-gradient(0deg, #5e2ced 0%, #a485fd 100%);
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
-top: 0px;
-left: 0;
-}
+-webkit-background-clip: text;-webkit-text-fill-color: transparent;top: 0px;left: 0;}
 
-.app_contact_info .info_item h6 {
-color: #051441;
-margin-bottom: 5px;
-}
-
-.app_contact_info .info_item p,
-.app_contact_info .info_item a {
-color: #677294;
-line-height: 24px;
-margin-bottom: 0px;
-}
-
-.app_contact_info .info_item a:hover {
-color: #4069eb;
-}
+.app_contact_info .info_item h6 {color: #051441;margin-bottom: 5px;}
+.app_contact_info .info_item p,.app_contact_info .info_item a {color: #677294;line-height: 24px;margin-bottom: 0px;}
+.app_contact_info .info_item a:hover {color: #4069eb;}
 
 
 /*================== contact_info_area css ================*/
+.contact_info_item {border-bottom: 1px solid #eeebf6;padding-bottom: 25px;}
+.contact_info_item p {color: #677294;margin-bottom: 8px;}
+.contact_info_item a {color: #677294;padding-left: 3px;display: inline-block;}
+.contact_info_item a:hover {color: #5e2ced;}
+.contact_info_item+.contact_info_item {border: 0px;margin-top: 33px;}
+.mapbox {height: 400px;-webkit-box-shadow: 0px 3px 4px 0px rgba(12, 0, 46, 0.05);box-shadow: 0px 3px 4px 0px rgba(12, 0, 46, 0.05);
+border: 10px solid #fff;}
 
-.contact_info_item {
-border-bottom: 1px solid #eeebf6;
-padding-bottom: 25px;
-}
-
-.contact_info_item p {
-color: #677294;
-margin-bottom: 8px;
-}
-
-.contact_info_item a {
-color: #677294;
-padding-left: 3px;
-display: inline-block;
-}
-
-.contact_info_item a:hover {
-color: #5e2ced;
-}
-
-.contact_info_item+.contact_info_item {
-border: 0px;
-margin-top: 33px;
-}
-
-.mapbox {
-height: 400px;
--webkit-box-shadow: 0px 3px 4px 0px rgba(12, 0, 46, 0.05);
-box-shadow: 0px 3px 4px 0px rgba(12, 0, 46, 0.05);
-border: 10px solid #fff;
-}
-
-#mapBox {
-height: 100% !important;
-}
-
-.text_box {
-margin-bottom: 30px;
-}
-
+#mapBox {height: 100% !important;}
+.text_box {margin-bottom: 25px;}
 .text_box input[type="text"],
 .text_box textarea,
 .text_box input[type="password"],
 .text_box input[type="email"] {
-font: 400 15px/60px "Roboto", sans-serif;
-color: #222d39;
-height: 60px;
-border-radius: 4px;
-background-color: white;
--webkit-box-shadow: 0px 2px 4px 0px rgba(12, 0, 46, 0.04);
-box-shadow: 0px 2px 4px 0px rgba(12, 0, 46, 0.04);
-width: 100%;
-border: 1px solid #fff;
-padding-left: 30px;
+        font: 400 15px/38px "Roboto", sans-serif;
+        color: #000;
+        height: 38px;    
+        border-radius: 4px;
+        background-color: white;    
+        -webkit-box-shadow: 0px 2px 4px 0px rgba(12, 0, 46, 0.04);
+        box-shadow: 0px 2px 4px 0px rgba(12, 0, 46, 0.04);
+        width: 100%;    
+        border: 1px solid #CFCFCF;    
+        padding: 0 10px;
+        /* -webkit-transition: all 0.3s linear;
+        -o-transition: all 0.3s linear; 
+        transition: all 0.3s linear; */
 }
 
 .text_box input[type="text"].placeholder,
 .text_box textarea.placeholder,
 .text_box input[type="password"].placeholder,
-.text_box input[type="email"].placeholder {
-color: #9ca3b9;
-}
-
+.text_box input[type="email"].placeholder {Color: #999;}
 .text_box input[type="text"]:-moz-placeholder,
 .text_box textarea:-moz-placeholder,
 .text_box input[type="password"]:-moz-placeholder,
-.text_box input[type="email"]:-moz-placeholder {
-color: #9ca3b9;
-}
-
+.text_box input[type="email"]:-moz-placeholder {color: #999;}
 .text_box input[type="text"]::-moz-placeholder,
 .text_box textarea::-moz-placeholder,
 .text_box input[type="password"]::-moz-placeholder,
-.text_box input[type="email"]::-moz-placeholder {
-color: #9ca3b9;
-}
-
+.text_box input[type="email"]::-moz-placeholder {color: #999;}
 .text_box input[type="text"]::-webkit-input-placeholder,
 .text_box textarea::-webkit-input-placeholder,
 .text_box input[type="password"]::-webkit-input-placeholder,
-.text_box input[type="email"]::-webkit-input-placeholder {
-color: #9ca3b9;
-}
-
+.text_box input[type="email"]::-webkit-input-placeholder {color: #999;}
 .text_box input[type="text"]:focus,
 .text_box textarea:focus,
 .text_box input[type="password"]:focus,
 .text_box input[type="email"]:focus {
-border-color: #f2effc;
+border-color: #2482D7;
 -webkit-box-shadow: 0px 10px 14px 0px rgba(12, 0, 46, 0.06);
 box-shadow: 0px 10px 14px 0px rgba(12, 0, 46, 0.06);
 outline: none;
 }
 
-.text_box textarea {
-height: 220px;
-}
-
-.contact_form_box .btn_three {
-min-width: 180px;
-text-align: center;
-background: #5e2ced;
-border-color: #5e2ced;
-margin-top: 0px;
-}
-
-.contact_form_box .btn_three:hover {
-background: transparent;
-color: #5e2ced;
-}
-
-.mapbox2 {
-height: 440px;
-border-top: 10px solid #fff;
-}
+.text_box textarea {height: 220px;}
+.contact_form_box .btn_three {min-width: 180px;text-align: center;background: #5e2ced;border-color: #5e2ced;margin-top: 0px;}
+.contact_form_box .btn_three:hover {background: transparent;color: #5e2ced;}
+.mapbox2 {height: 440px;border-top: 10px solid #fff;}
 
 
 /*============= login_area css =============*/
 
-.login_area {
-position: relative;
-overflow: hidden;
-z-index: 1;
-}
+.login_area {position: relative;overflow: hidden;z-index: 1;}
+.login_area .login_info {padding: 40px 40px 0px 0;}
+.login_area .login_info:before {content: "";position: absolute;width: 2500px;right: 0;height: 100%;background: #fbfbfb;top: 0;
+z-index: -1;}
+.login_area .login_info p a {color: #677294;}
+.login-form .text_box .text_c {color: #000;font-size: 15px;margin-bottom: 10px;}
+.smgry{color: #666; font-size: 13px;font-weight: normal;}
+.login-form .text_box input[type="password"] {}
+.login-form .text_box input[type="password"]:focus {padding-top: 0px;}
+.login-form .extra {display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-pack: justify;-ms-flex-pack: justify;
+justify-content: space-between;font: 400 14px/26px "Roboto", sans-serif;margin-top: 0px;}
+.login-form .extra .checkbox label {margin-bottom: 0px;color: #161341;}
+.login-form .extra .checkbox input[type="checkbox"] {position: relative;width: 10px;height: 10px;margin-right: 10px;}
+.login-form .extra .checkbox input[type="checkbox"]:before {content: "";display: block;position: absolute;width: 10px;
+height: 10px;top: 0;left: 0;border: 1px solid #7348ef;border-radius: 2px;background-color: white;}
+.login-form .extra .checkbox input[type="checkbox"]:checked:after {content: "";display: block;width: 4px;height: 8px;border: solid #7348ef;
+border-width: 0 2px 2px 0;-webkit-transform: rotate(45deg);-ms-transform: rotate(45deg);transform: rotate(45deg);position: absolute;
+top: 0px;left: 3px;}
+.login-form .btn_three {width: 100%;background: #5e2ced;color: #fff;margin-top: 40px;}
+.login-form .btn_three:hover {-webkit-box-shadow: 0px 20px 30px 0px rgba(61, 100, 244, 0.16);box-shadow: 0px 20px 30px 0px rgba(61, 100, 244, 0.16);}
+.login-form .alter-login {font: 400 15px/26px "Roboto", sans-serif;color: #9ca3b9;}
+.login-form .alter-login a {display: inline-block;margin-left: 6px;}
+.login_img {padding-left: 30px; margin-right: -286px;}
+.login_img img {max-width: 100%;}
 
-.login_area .login_info {
-padding: 160px 100px 160px 0px;
-}
-
-.login_area .login_info:before {
-content: "";
-position: absolute;
-width: 2500px;
-right: 0;
-height: 100%;
-background: #fbfbfb;
-top: 0;
-z-index: -1;
-}
-
-.login_area .login_info p a {
-color: #677294;
-}
-
-.login-form .text_box .text_c {
-color: #161341;
-font-size: 14px;
-margin-bottom: 15px;
-}
-
-.login-form .text_box input[type="password"] {
-padding-top: 8px;
-line-height: 50px;
-}
-
-.login-form .text_box input[type="password"]:focus {
-padding-top: 0px;
-}
-
-.login-form .extra {
-display: -webkit-box;
-display: -ms-flexbox;
-display: flex;
--webkit-box-pack: justify;
--ms-flex-pack: justify;
-justify-content: space-between;
-font: 400 14px/30px "Roboto", sans-serif;
-margin-top: 45px;
-}
-
-.login-form .extra .checkbox label {
-margin-bottom: 0px;
-color: #161341;
-}
-
-.login-form .extra .checkbox input[type="checkbox"] {
-position: relative;
-width: 10px;
-height: 10px;
-margin-right: 10px;
-}
-
-.login-form .extra .checkbox input[type="checkbox"]:before {
-content: "";
-display: block;
-position: absolute;
-width: 10px;
-height: 10px;
-top: 0;
-left: 0;
-border: 1px solid #7348ef;
-border-radius: 2px;
-background-color: white;
-}
-
-.login-form .extra .checkbox input[type="checkbox"]:checked:after {
-content: "";
-display: block;
-width: 4px;
-height: 8px;
-border: solid #7348ef;
-border-width: 0 2px 2px 0;
--webkit-transform: rotate(45deg);
--ms-transform: rotate(45deg);
-transform: rotate(45deg);
-position: absolute;
-top: 0px;
-left: 3px;
-}
-
-.login-form .extra .forgotten-password a {
-color: #677294;
-}
-
-.login-form .btn_three {
-width: 100%;
-background: #5e2ced;
-color: #fff;
-margin-top: 40px;
-}
-
-.login-form .btn_three:hover {
--webkit-box-shadow: 0px 20px 30px 0px rgba(61, 100, 244, 0.16);
-box-shadow: 0px 20px 30px 0px rgba(61, 100, 244, 0.16);
-}
-
-.login-form .alter-login {
-font: 400 15px/26px "Roboto", sans-serif;
-color: #9ca3b9;
-}
-
-.login-form .alter-login a {
-color: #5e2ced;
-display: inline-block;
-margin-left: 6px;
-}
-
-.login_img {
-padding-left: 100px;
-margin-right: -250px;
-}
-
-.login_img img {
-max-width: 100%;
-}
-
+.bigbtn .green_btn{padding: 8px 40px; font-size: 16px; font-weight: bold;}
 
 /*==================== sign_in_area css ==================*/
 
@@ -11304,12 +11096,12 @@ position: relative;
 border-width: 1px;
 border-style: solid;
 border-radius: 0px;
-margin-bottom: 30px;
+margin-bottom: 20px;
 }
 
 .alert i {
 float: left;
-font-size: 20px;
+font-size: 16px;
 line-height: 32px;
 margin-right: 20px;
 }
@@ -20034,7 +19826,7 @@ border: 1px solid #e3e3e3;}
 /* END */
 
 /* Popup Class */
-.closebtn{position: absolute;z-index: 1;right: 13px;top: 3px;}
+.closebtn{position: absolute;z-index: 1;right: 13px;top: 6px;}
 .closebtn2 {position: absolute; z-index: 1; right: 22px; top: 11px;}
 .popupbtn{padding: 6px 16px;font-size: 15px;}
 .pop9{max-width: 900px;}
@@ -20054,7 +19846,7 @@ border: 1px solid #e3e3e3;}
 .breadcrumb_area { background-image: -moz-linear-gradient(-180deg, #50acff 0%, #1b70bd 100%); background-image: -webkit-linear-gradient(-180deg, #50acff 0%, #1b70bd 100%);
 background-image: -ms-linear-gradient(-180deg, #50acff 0%, #1b70bd 100%); position: relative; z-index: 1; padding: 100px 0px 0;overflow: hidden;}
 .breadcrumb_area .breadcrumb_shap {position: absolute; right: 0; bottom: 0; z-index: -1;}
-.breadcrumb_content{padding: 60px 0;}
+.breadcrumb_content{padding: 30px 0;}
 .breadcrumb-links li {display: inline-block; font-weight: 700; font-size: 14px;color: #fff; letter-spacing: 0.6px;}
 .breadcrumb-links li a{display: inline-block; padding: 6px 6px;color: #fff;font-weight:normal;}
 .breadcrumb-links li:nth-child(1)::before{display: none;}
@@ -20086,22 +19878,28 @@ line-height: 28px; text-align: center; background: #338CDB; margin: 0; border-ra
 height: 40px;}
 
 /* tables */
-.customtbl tr th{padding: 8px 10px;  text-align: center;
-font-size: 14px; border-top: 0;border-bottom: 0;
-background: #338CDB;
-color: #fff;}
-.customtbl tr td{font-weight: normal; vertical-align: middle;
-font-size: 13px;padding: 6px 10px;
-text-align: left;}
-
+.customtbl tr th{padding: 8px 10px;  text-align: center;font-size: 14px; border-top: 0;border-bottom: 0;background: #338CDB;color: #fff;}
+.customtbl tr td{font-weight: normal; vertical-align: middle;font-size: 13px;padding: 6px 10px;text-align: left;}
 .customtbl tr:nth-child(odd){   background: rgba(0,0,0,.03  );}
-.customtbl .btn-success{background-color: #6cac17;
-    border-color: #6cac17;
-    border-radius: 50px;
-    width: 30px;
-    height: 30px;
-    line-height: 30px;
-    padding: 0;}
-    .customtbl .btn-success:hover{background-color: #338CDB; border-color: #338CDB;}
-    .cetnble tr td{text-align: center!important;}
+.customtbl .btn-success{background-color: #6cac17; border-color: #6cac17; border-radius: 50px;width: 30px;height: 30px;
+line-height: 30px; padding: 0;}
+.customtbl .btn-success:hover{background-color: #338CDB; border-color: #338CDB;}
+.cetnble tr td{text-align: center!important;}
 .maintblhd-bg{background: #2376bf!important;}
+
+
+/* Custom form */
+.extra .toast{display: none;position: absolute; overflow: visible;  left: 116px;    bottom: 33px;min-width: 750px; z-index: 1; border-radius: 6px;}
+.extra .toast-show{opacity: 1;display: block;}
+.extra .toast-body .ht{ height: 445px;}
+.cur_point {cursor: pointer;}
+.extra .toast-header{background: #6cac17;}
+.custom-select:focus {border-color: #2482D7;  outline: 0; -webkit-box-shadow: 0px 10px 14px 0px rgba(12, 0, 46, 0.06); box-shadow: 0px 10px 14px 0px rgba(12, 0, 46, 0.06);}
+.login_area label, .forgotform label{font-weight: 500;font-size: 14px;}
+ .small2 {background: #e5eefd;border-radius: 50px;padding: 5px 15px;}
+.extra .toast .custom-control {font-size: 13px;padding-left: 2rem;margin-bottom: 5px; margin-bottom: 10px;}
+.extra .toast .custom-control-label{line-height: 21px;}
+.extra .arrow:before {position: absolute;z-index: 1; bottom: -10px; left: 50px; display: block; width: 16px;  height: 16px;
+        content: '';  width: 0;  height: 0; border-left: 15px solid transparent; border-right: 15px solid transparent; border-top: 15px solid #f4faff;
+        box-shadow: none;}
+.hide{display: block;}
