--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18438,6 +18438,15 @@ box-shadow: 0 0 7px #8c8a8a;
 border: 5px solid #fff;
 }
 
+.latestInfo .latico img{
+
+        width: 30px;
+        margin-top: 17px;
+}
+
+
+
+
 .latestInfo .d_product_content_two .develor_tab .nav-item .nav-link.active .latico {
 background: #6cac17;
 }
@@ -18577,7 +18586,7 @@ background: #fff;
 -webkit-box-shadow: 0px 2px 7px 0px rgba(132, 132, 132, 0.2);
 box-shadow: 0px 2px 7px 0px rgba(132, 132, 132, 0.2);
 padding: 15px;
-height: 100%;
+height: 100%;min-height: 207px;
 border-radius: 6px;
 text-align: center;
 position: relative;
@@ -18595,7 +18604,7 @@ box-shadow: 0px 1px 15px 0px rgba(132, 132, 132, 0.2);
 transition: all 0.2s linear;
 }
 
-.courses_item .icon { width: 75px; margin: 15px auto 14px auto;}
+.courses_item .icon { width: 90px; margin: 15px auto 14px auto;}
 .courses_area .owl-carousel .owl-stage-outer {padding: 15px 0;}
 .coursename{font-weight: 500; line-height: 24px; text-transform: uppercase; font-size: 15px;}
 
